cabal-version: 1.18
name: cpkg
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vanessa.mchale@iohk.io
author: Vanessa McHale
synopsis: Build tool for C
description:
    A build tool and package manager configured using [Dhall](https://github.com/dhall-lang/dhall-haskell).
category: Packaging, Package Management, Dhall
build-type: Simple
extra-source-files:
    cabal.project
    dhall/cpkg-prelude.dhall
extra-doc-files: README.md
                 CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/vmchale/cpkg

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Package.C
    hs-source-dirs: src
    other-modules:
        Package.C.Dhall
        Package.C.Dhall.Type
        Package.C.Type
        Package.C.Type.Shared
        Package.C.Build
        Package.C.Build.OS
        Package.C.Unpack
        Package.C.Error
        Package.C.Fetch
        Package.C.Version
        Package.C.Monad
        System.Process.Ext
    default-language: Haskell2010
    other-extensions: DeriveGeneric DeriveAnyClass OverloadedStrings
                      DerivingStrategies GeneralizedNewtypeDeriving
    ghc-options: -Wall
    build-depends:
        base >=4.3 && <5,
        containers -any,
        dhall -any,
        text -any,
        temporary -any,
        bytestring -any,
        zlib -any,
        bzlib -any,
        lzma -any,
        tar -any,
        zip-archive -any,
        prettyprinter -any,
        http-client -any,
        http-client-tls -any,
        directory -any,
        filepath -any,
        process -any,
        mtl -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

executable cpkg
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Paths_cpkg
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base -any,
        cpkg -any,
        optparse-applicative -any,
        directory -any

    if flag(development) && impl(ghc <= 8.2)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

test-suite cpkg-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base -any,
        cpkg -any,
        hspec -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

benchmark cpkg-bench
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    hs-source-dirs: bench
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -O3 -Wall
    build-depends:
        base -any,
        cpkg -any,
        criterion -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
                     -Wredundant-constraints -Widentities

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
